--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
     <!-- Book form dialog -->
     <dialog id="book-form-dialog">
         <form id="book-form">
+            <h2>Add New Book</h2>
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" id="title" required>
+            </div>
+            <div class="form-group">
+                <label for="author">Author:</label>
+                <input type="text" id="author" required>
+            </div>
+            <div class="form-group">
+                <label for="pages">Pages:</label>
+                <input type="number" id="pages" required min="1">
+            </div>
+            <div class="form-group checkbox">
+                <input type="checkbox" id="read">
+                <label for="read">I've read this book</label>
+            </div>
+            <div class="form-actions">
+                <button type="button" id="cancel-btn">Cancel</button>
+                <button type="submit">Add Book</button>
+            </div>
         </form>
     </dialog>
 
